getProfile接口
