# server/dao/system/sys_group.go
@@ -7,6 +7,16 @@ import (
 
 type GroupDao struct{}
 
+func (*GroupDao) FindGroupsByCodes(sysGroupCodes []string) ([]system.SysGroup, error) {
+	db := global.OMS_DB
+	var sysGroups []system.SysGroup
+	err := db.Where("enable = true and org_code in ?", sysGroupCodes).Order("sort").Find(&sysGroups).Error
+	if err != nil {
+		return nil, err
+	}
+	return sysGroups, nil
+}
+
 func (*GroupDao) FindGroupsByIds(sysGroupIds []uint) ([]system.SysGroup, error) {
 	db := global.OMS_DB
 	var sysGroups []system.SysGroup
